# aegis

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_COMPLETE.md  BUILD_SUMMARY.md  COMPLETE_P0_IMPLEMENTATION.py  COMPLETE_P0_NOW.py  COMPLETE_P1_NOW.py  COMPLETE_P2_NOW.py  COMPLETE_SYSTEM_DOCUMENTATION.md  CONTRIBUTING.md  GETTING_STARTED.md  MISSING_COMPONENTS.md  Makefile  P0_COMPLETE_SUMMARY.md  P0_DEPLOYMENT.md  P0_STATUS.txt  P1_COMPLETE_SUMMARY.md  P1_STATUS.txt  P2_COMPLETE_SUMMARY.md  README.md  SYSTEM_ARCHITECTURE.md  alembic.ini  docker-compose.complete.yml  docker-compose.p0.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_generation.py
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
.kiro/specs/generic-ai-evaluation-mvp/: design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile.api  Dockerfile.ingestion  Dockerfile.worker
docs/: 12_WEEK_ROADMAP.md  system_design.md
docs/integrations/: langchain.md  llamaindex.md
domains/healthcare/: domain_spec.yaml
domains/legal/: domain_spec.yaml
domains/robotics/: domain_spec.yaml
domains/trading/: domain_spec.yaml
examples/: demo_full_system.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Domains.tsx  ExpertReview.tsx  Settings.tsx  TraceDetail.tsx  TraceExplorer.tsx
k8s/: deployment.yaml  monitoring.yaml
migrations/: env.py
monitoring/grafana/dashboards/: system_overview.json
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: init_db.py  onboard_customer.py  setup-dev.sh
src/metronis/: __init__.py  cli.py  config.py
src/metronis/api/: analytics.py  dependencies.py  main.py  traces.py  websocket_manager.py
src/metronis/api/routes/: billing.py  compliance.py  evaluations.py  expert_review.py  onboarding.py  search.py  traces.py  websocket.py
src/metronis/core/: __init__.py  auto_generator.py  config.py  domain.py  exceptions.py  interfaces.py  models.py  orchestrator.py
src/metronis/db/: __init__.py  models.py  session.py
src/metronis/evaluators/: rl_evaluators.py  tier3_llm_evaluators.py
src/metronis/infrastructure/: __init__.py  database.py
src/metronis/infrastructure/models/: __init__.py  evaluation_model.py  organization_model.py  (+1 more)
src/metronis/ml/: tier2_trainer.py  transfer_learning.py
src/metronis/onboarding/: quickstart.py
src/metronis/sdk/: client.py
src/metronis/services/: __init__.py  active_learning.py  alert_service.py  billing_service.py  compliance_service.py  elasticsearch_service.py  expert_review_service.py  knowledge_base_service.py  llm_service.py  phi_detector.py  queue_service.py
src/metronis/templates/: simulator.py.j2  tier1_validator.py.j2  tier2_model.py.j2  tier3_prompt.txt.j2
src/metronis/workers/: evaluation_worker.py  queue_service.py
tests/: __init__.py  conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_api.py
tests/unit/: __init__.py  test_billing.py
tests/unit/core/: test_models.py
(+12 files in other folders)
